--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
 <!-- Header -->
 
 <h1 class="display-4" id="aboutTitle">Hey, I'm Denea!</h1>
-    <!-- About -->
+    <hr style="height:4px;border-width:0;color:#FFDFCC;background-color:#FFDFCC">
     <div class="clearfix" style="width: 70rem;">
-      <img src="../portfolioExample/assets/DSC_0085.JPG" class="col-md-6 float-md-end mb-3 ms-md-3"  alt="...">
-      <p class="lead">I'm an aspiring UX/UI designer, based in Indianapolis, IN. </p>
-      <p class="bio">Currently attending web development bootcamp, with plans to start UX/UI courses immediately after. I hope that my previous knowledge in bookkeeping and problem solving skills will make me a great designer and addition to any team I may join! </p>
+      <img src="./assets/DSC_0085.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" id="me" alt="...">
+      <p class="lead">An aspiring UX/UI designer, based in Indianapolis, IN. </p>
+      <p class="bio">Currently attending web development bootcamp, with plans to start UX/UI courses immediately after. 
+        I hope that my previous knowledge in bookkeeping, administrative skills, and problem solving skills will make me a great designer and addition to any team. I'm excited for this transition! </p>
       <h2>Skills</h2>
       <p>My skills include:</p>
       <ul>
@@ -68,7 +69,7 @@
         <li>Account Management</li>
         <li>Data Entry</li>
 
-        <a class="btn btn-light resume" href="../portfolioExample/assets/DRansomResume.pdf" id="button"download="../portfolioExample/assets/DRansomResume.pdf">Download My Resume</a>
+        <a class="btn btn-light resume" href="./assets/DRansomResume.pdf" id="button"download="./assets/DRansomResume.pdf">Download My Resume</a>
 
     </div>
 
@@ -85,8 +86,9 @@
         <div class="card"style= "width: 35rem;">
           <div class="card-body">
             <h5 class="card-title">Static Layout</h5>
+            <img src="./assets/Kast.png" style="max-height: 12rem;" class="projectPhoto">
             <p class="card-text">My 1<sup>st</sup> bootcamp project, A static layout of "Kast.com".</p>
-            <a href="https://denearansom.github.io/staticLayout/" class="btn btn-light">View Project</a>
+            <a href="https://denearansom.github.io/staticLayout/" target="_blank" class="btn btn-light">View Project</a>
           </div>
         </div>
       </div>
@@ -94,8 +96,9 @@
         <div class="card"style= "width: 35rem;">
           <div class="card-body">
             <h5 class="card-title">Cat Facts API</h5>
+            <img src="./assets/cat.png" style="max-height: 12rem;" class="projectPhoto">
             <p class="card-text">My 1<sup>st</sup> API project. </p>
-            <a href="https://denearansom.github.io/API-1/" class="btn btn-light">Take a look</a>
+            <a href="https://denearansom.github.io/API-1/" target="_blank" class="btn btn-light">Take a look</a>
           </div>
         </div>
       </div>
@@ -109,6 +112,7 @@
         <div class="card" style= "width: 35rem;">
           <div class="card-body">
             <h5 class="card-title">Portfolio</h5>
+            <img src="./assets/Screen Shot 2021-04-01 at 4.55.02 PM.png" style="max-height: 12rem;" class="projectPhoto">
             <p class="card-text">My 3<sup>rd</sup> bootcamp project, this Portfolio you're looking at now.</p>
             <a href="" class="btn btn-light">View Portfolio</a>
           </div>
@@ -118,8 +122,9 @@
         <div class="card" style= "width: 35rem;">
           <div class="card-body">
             <h5 class="card-title">Giphy API</h5>
+            <img src="./assets/giphy.png" style="max-height: 12rem;" class="projectPhoto"></a>
             <p class="card-text">My 4<sup>th</sup> bootcamp project, further testing my knowledge of APIs.</p>
-            <a href="" class="btn btn-light">Giphy API</a>
+            <a href="https://giphy-api-dr.web.app/" target="_blank" class="btn btn-light">Giphy API</a>
           </div>
         </div>
       </div>
