--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Navbar  -->
   <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"> <img src="../portfolioExample/assets/FullColor_TextOnly_1280x1024_72dpi.png"> </a>
+      <a class="navbar-brand" href="#"> <img src="./assets/FullColor_TextOnly_1280x1024_72dpi.png" style="height: 5rem;"> </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -37,12 +37,12 @@
           
           <li class="nav-item">
             <a class="nav-link" href="https://github.com/DeneaRansom">
-              <img src="../portfolioExample/assets/iconfinder_github_social_media_logo_1221583.png" width="30" height="30">
+              <img src="./assets/iconfinder_github_social_media_logo_1221583.png" width="30" height="30">
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link " href="https://www.linkedin.com/in/denea-ransom-43799983/" tabindex="-1" aria-disabled="true">
-            <img src="../portfolioExample/assets/iconfinder_SocialMedia_LinkedIn-Outline_2959747.png" width="30" height="30">
+            <img src="./assets/iconfinder_SocialMedia_LinkedIn-Outline_2959747.png" width="30" height="30">
             </a>
           </li>
         </ul>
